@startuml

package socket聊天后台{

    class ChatServerUi {
        void clientMsgToUi();// 客户端放回的信息进行返显
        void toServer();// 收到命令下发消息后把消息转发给消息处理器
    }

    class MsgHandler {
        void sendSingleMsgToServer();// 私聊功能
        void serverMsgToClientUi();// 客户端返回消息给UI进行返显
        void msgToServer();// 客户端给服务端发送消息
        void clientMsgToServerUi// 客户端返回服务端信息进行返显
    }

    class Server {
        void readMsg(); // 接受客户端消息
        void sendMsgToClient(); // 发送消息给客户端
    }

    class Client {
        void sendMsgToServer();// 发送消息给服务端
        void readMsg();// 接收服务端消息
    }

    class ChatClientUi {
        void msgToClient();// 收到命令下发消息后把消息转发给消息处理器
    }
    ChatServerUi ..> MsgHandler
    MsgHandler ..> Server
    Client..> MsgHandler
    MsgHandler..> ChatClientUi
    ChatClientUi..> MsgHandler
    MsgHandler ..> Client
    Server..> MsgHandler
    MsgHandler..> ChatServerUi

}
@enduml